<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llNavHeaderRoot"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_navHeader_height"
    android:background="@drawable/wallpaper"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/main_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imgUserPhoto"
        android:layout_width="70dp"
        android:layout_margin="@dimen/main_margin"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:paddingTop="@dimen/drawer_padding_top"
        android:contentDescription="@string/main_imgUserPhoto"
        app:srcCompat="@drawable/user"/>

    <TextView
        android:id="@+id/lblUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/drawer_padding_top"
        android:layout_marginBottom="@dimen/main_margin"
        android:text="@string/main_lblUserName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/lblUserDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lblUserDescr"/>

    <TextView
        android:id="@+id/lblUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lblUserEmail"/>

</LinearLayout>